unpackaged/main/default/objects/Opportunity/fields/Access_to_discuss_resolution__c.field-meta.xml
<CustomField>
    <fullName>Access_to_discuss_resolution__c</fullName>
    <label>Access to discuss resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>