unpackaged/main/default/objects/Opportunity/fields/Account_Holder_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Type__c</fullName>
    <label>Account Holder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Personal Checking</fullName>
            </value>
            <value>
                <fullName>Personal Savings</fullName>
            </value>
            <value>
                <fullName>Business Checking</fullName>
            </value>
            <value>
                <fullName>Business Savings</fullName>
            </value>
            <value>
                <fullName>Savings Account</fullName>
                <isActive>false</isActive>
                <label>Savings Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>