unpackaged/main/default/objects/Opportunity/fields/Account_PersonEmail__c.field-meta.xml
<CustomField>
    <fullName>Account_PersonEmail__c</fullName>
    <formula>Account.PersonContact.Email</formula>
    <label>Account PersonEmail</label>
    <type>Text</type>
</CustomField>