unpackaged/main/default/objects/Opportunity/fields/Approved_For_Financing__c.field-meta.xml
<CustomField>
    <fullName>Approved_For_Financing__c</fullName>
    <label>Approved For Financing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>