unpackaged/main/default/objects/Opportunity/fields/bt_stripe__Default_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Default_Tax_Rate__c</fullName>
    <description>The tax rate that will apply to any subscription item if tax_rates is not set. Invoices created will have their default_tax_rates populated from the subscription.</description>
    <inlineHelpText>The tax rate that will apply to any subscription item if tax_rates is not set. Invoices created will have their default_tax_rates populated from the subscription.</inlineHelpText>
    <label>Default Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>