unpackaged/main/default/objects/Opportunity/fields/bt_stripe__Prorate__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Prorate__c</fullName>
    <description>Set whether to credit for unused time when the billing cycle changes or if an item&#39;s quantity changes. If No, the anchor period will be free (similar to a trial) and no proration adjustments will be created.</description>
    <inlineHelpText>Set whether to credit for unused time when the billing cycle changes or if an item&#39;s quantity changes. If No, the anchor period will be free (similar to a trial) and no proration adjustments will be created.</inlineHelpText>
    <label>Prorate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>