unpackaged/main/default/objects/Opportunity/fields/bt_stripe__Subscription__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>bt_stripe__Subscription2__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>