unpackaged/main/default/objects/Opportunity/fields/CallRecaptureAttempts__c.field-meta.xml
<CustomField>
    <fullName>CallRecaptureAttempts__c</fullName>
    <label>Recapture Call Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>