unpackaged/main/default/objects/Opportunity/fields/Card_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Card_Type_Code__c</fullName>
    <label>Card Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>