unpackaged/main/default/objects/Opportunity/fields/Case_Closed_Due_to_Client_Request__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Due_to_Client_Request__c</fullName>
    <label>Case Closed Due to Client Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Went to Competitor</fullName>
            </value>
            <value>
                <fullName>Financial Constraints</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction</fullName>
            </value>
            <value>
                <fullName>Disputing Payments</fullName>
            </value>
            <value>
                <fullName>Went directly through IRS</fullName>
            </value>
            <value>
                <fullName>Paid off the debt themselves</fullName>
            </value>
            <value>
                <fullName>Cancelled within 3 days of signing</fullName>
            </value>
            <value>
                <fullName>TSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>