unpackaged/main/default/objects/Opportunity/fields/Client_Has_Form_1098_Income__c.field-meta.xml
<CustomField>
    <fullName>Client_Has_Form_1098_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Has Form 1098 Income</label>
    <type>Checkbox</type>
</CustomField>