unpackaged/main/default/objects/Opportunity/fields/Client_is_Homeowner__c.field-meta.xml
<CustomField>
    <fullName>Client_is_Homeowner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client is Homeowner</label>
    <type>Checkbox</type>
</CustomField>