unpackaged/main/default/objects/Opportunity/fields/Client_Owns_more_than_1_Real_Estate_Prop__c.field-meta.xml
<CustomField>
    <fullName>Client_Owns_more_than_1_Real_Estate_Prop__c</fullName>
    <label>Owns more than 1 Real Estate Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>