unpackaged/main/default/objects/Opportunity/fields/Client_Owns_Multiple_Properties__c.field-meta.xml
<CustomField>
    <fullName>Client_Owns_Multiple_Properties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Owns Multiple Properties</label>
    <type>Checkbox</type>
</CustomField>