unpackaged/main/default/objects/Opportunity/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>ITR Close Date</label>
    <type>Date</type>
</CustomField>