unpackaged/main/default/objects/Opportunity/fields/Collection_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Collection_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Specialist</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Billing</value>
        </filterItems>
        <filterItems>
            <field>User.Username</field>
            <operation>equals</operation>
            <value>jsanchez@innovativetaxreliefllc.com</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>