unpackaged/main/default/objects/Opportunity/fields/Country_ISO__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO__c</fullName>
    <label>Country ISO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <default>true</default>
                <label>US</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>