unpackaged/main/default/objects/Opportunity/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <description>This field is to mirror the Account Credit Rating field.</description>
    <formula>TEXT (Account.Credit_Rating__pc)</formula>
    <label>Credit Rating</label>
    <type>Text</type>
</CustomField>