unpackaged/main/default/objects/Opportunity/fields/Currency_ISO__c.field-meta.xml
<CustomField>
    <fullName>Currency_ISO__c</fullName>
    <label>Currency ISO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>