unpackaged/main/default/objects/Opportunity/fields/Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone_Number__c</fullName>
    <formula>Account.PersonContact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>