unpackaged/main/default/objects/Opportunity/fields/CVV__c.field-meta.xml
<CustomField>
    <fullName>CVV__c</fullName>
    <label>CVV</label>
    <length>4</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>