unpackaged/main/default/objects/Opportunity/fields/DecisionFi_Status__c.field-meta.xml
<CustomField>
    <fullName>DecisionFi_Status__c</fullName>
    <label>DecisionFi Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>