unpackaged/main/default/objects/Opportunity/fields/Down_Payment_1__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_1__c</fullName>
    <inlineHelpText>Amount  of the 1st payment in convination with the Date field</inlineHelpText>
    <label>Down Payment 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>