unpackaged/main/default/objects/Opportunity/fields/Down_Payment_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_1_Date__c</fullName>
    <inlineHelpText>This Field purpose is for the Downpayment in the contract</inlineHelpText>
    <label>Down Payment 1 Date</label>
    <type>Date</type>
</CustomField>