unpackaged/main/default/objects/Opportunity/fields/Down_Payment_2__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_2__c</fullName>
    <label>Down Payment 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>