unpackaged/main/default/objects/Opportunity/fields/Down_Payment_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_2_Date__c</fullName>
    <label>Down Payment 2 Date</label>
    <type>Date</type>
</CustomField>