unpackaged/main/default/objects/Opportunity/fields/down_Payment_3_Date_v2__c.field-meta.xml
<CustomField>
    <fullName>down_Payment_3_Date_v2__c</fullName>
    <formula>TEXT(MONTH( Down_Payment_3_Date__c )) &amp; &quot;/&quot; &amp; TEXT(DAY( Down_Payment_3_Date__c )) &amp; &quot;/&quot; &amp; TEXT(YEAR( Down_Payment_3_Date__c ))</formula>
    <label>down_Payment_3_Date_v2</label>
    <type>Text</type>
</CustomField>