unpackaged/main/default/objects/Opportunity/fields/Expiration_Month__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Month__c</fullName>
    <label>Expiration Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>