unpackaged/main/default/objects/Opportunity/fields/Expiration_Year__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Year__c</fullName>
    <label>Expiration Year</label>
    <length>2</length>
    <type>Text</type>
</CustomField>