unpackaged/main/default/objects/Opportunity/fields/expiration_Year_v2__c.field-meta.xml
<CustomField>
    <fullName>expiration_Year_v2__c</fullName>
    <formula>Expiration_Month__c  &amp; &quot;/ &quot; &amp;  Expiration_Year__c</formula>
    <label>expiration_Year_v2</label>
    <type>Text</type>
</CustomField>