unpackaged/main/default/objects/Opportunity/fields/Exploratory_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Exploratory_Service_Type__c</fullName>
    <label>Exploratory Service Type</label>
    <length>32500</length>
    <type>LongTextArea</type>
</CustomField>