unpackaged/main/default/objects/Opportunity/fields/Failed_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Failed_Transaction__c</fullName>
    <label>Failed Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>