unpackaged/main/default/objects/Opportunity/fields/Failed_Transaction_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Failed_Transaction_Indicator__c</fullName>
    <formula>IMAGE(
CASE(Failed_Transaction__c,
&quot;Yes&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;Failed Transaction&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Failed Transaction Flag</label>
    <type>Text</type>
</CustomField>