unpackaged/main/default/objects/Opportunity/fields/Federal_Tax_Return_Years_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Return_Years_Legacy__c</fullName>
    <label>Federal Tax Return Years</label>
    <length>100</length>
    <type>Text</type>
</CustomField>