unpackaged/main/default/objects/Opportunity/fields/Financing_Lender_Used__c.field-meta.xml
<CustomField>
    <fullName>Financing_Lender_Used__c</fullName>
    <label>Financing Lender Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DecisionFi</fullName>
            </value>
            <value>
                <fullName>Monterey Tier A</fullName>
            </value>
            <value>
                <fullName>Monterey Tier B</fullName>
            </value>
            <value>
                <fullName>Monterey Tier B+</fullName>
            </value>
            <value>
                <fullName>Monterey-Tier C</fullName>
            </value>
            <value>
                <fullName>Monterey Poss-Flip</fullName>
            </value>
            <value>
                <fullName>Elevate Finance - Tier 1</fullName>
            </value>
            <value>
                <fullName>Elevate Finance - Tier 2</fullName>
            </value>
            <value>
                <fullName>Elevate Finance - Tier 3</fullName>
            </value>
            <value>
                <fullName>Elevate Finance - Tier 4</fullName>
            </value>
            <value>
                <fullName>Elevate Finance - Tier 5</fullName>
            </value>
            <value>
                <fullName>Flexxbuy</fullName>
            </value>
            <value>
                <fullName>UCFS</fullName>
            </value>
            <value>
                <fullName>ZipLoan</fullName>
            </value>
            <value>
                <fullName>Afterpay</fullName>
            </value>
            <value>
                <fullName>ElevateFinance</fullName>
            </value>
            <value>
                <fullName>Monterey</fullName>
            </value>
            <value>
                <fullName>Finturf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>