unpackaged/main/default/objects/Opportunity/fields/Financining_Amount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Financining_Amount_Approved__c</fullName>
    <label>Financning Amount Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>