unpackaged/main/default/objects/Opportunity/fields/First_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Pay_Date__c</fullName>
    <label>First Pay Date</label>
    <type>DateTime</type>
</CustomField>