unpackaged/main/default/objects/Opportunity/fields/First_Trader__c.field-meta.xml
<CustomField>
    <fullName>First_Trader__c</fullName>
    <description>First Trader</description>
    <formula>X1T_Opportunity__r.Owner.FirstName&amp;&quot; &quot;&amp;X1T_Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Trader</label>
    <type>Text</type>
</CustomField>