unpackaged/main/default/objects/Opportunity/fields/Former_Client__c.field-meta.xml
<CustomField>
    <fullName>Former_Client__c</fullName>
    <label>Former Client (Legacy)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>