unpackaged/main/default/objects/Opportunity/fields/Gross_Resolution_Costs__c.field-meta.xml
<CustomField>
    <fullName>Gross_Resolution_Costs__c</fullName>
    <label>Gross Resolution Costs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>