unpackaged/main/default/objects/Opportunity/fields/Has_a_Business__c.field-meta.xml
<CustomField>
    <fullName>Has_a_Business__c</fullName>
    <description>Does this client has a business?</description>
    <formula>TEXT( Account.Has_a_Business__c)</formula>
    <inlineHelpText>Does this client has a business?</inlineHelpText>
    <label>Has a Business?</label>
    <type>Text</type>
</CustomField>