unpackaged/main/default/objects/Opportunity/fields/Has_Services__c.field-meta.xml
<CustomField>
    <fullName>Has_Services__c</fullName>
    <formula>HasOpportunityLineItem</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Services?</label>
    <type>Checkbox</type>
</CustomField>